Copyright (c) 2002-2007 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes
 
  Silva 1.6.x (SVN/UNRELEASED)

    Features added:
      - Fixed minor bugs in kupu table toolbox where the column widths field did
        not get updated (issue 1577)
        
      - Fixed bug in scaling of images, where images with a scaling of 100%
        would return the modification date of the original hires image, creating
        problems with caching (issue 1557)
      
      - Disabled custom kupu context menu, so that the original browser context
        menu is shown. This allows firefox users to use the firefox spellchecker
      
      - Changed the lang attribute of the layout macro html tag to get the lang
        from metadata, as in: https://infrae.com/issue/silva/issue1566
        Lower cased the language codes in the metadata set, as in:
        https://infrae.com/issue/silva/issue1668

      - Moved the css selectors for rollover tooltips in Kupu toolboxes higher
        in the cascade so they apply to all toolboxes. Added tooltips for the 
        new anchor/index item toolbox and the abbr/acronym toolbox.

      - Fixed up the Indexer:
          Add tbody since Zope puts it in anyway
          Add odd/even cycling for table rows
          Remove double defines
          Fix title for cases where there isn't one
          Fix display for empty indexer
          Reduce arbitrary indenting

      - Changed css styling of the preview publisher buttons, making easier 
        for users to integrate the publisher into their own layout.

      - Fix for TOCs and AutoTOCS where docs that didn't have a title
        didn't appear because the link was empty (it was there). Now the
        id shows up so visitors can at least click it.

      - Renevated the TOC/AutoToc rendering, replacing the ancient,
        legacy, Netscape4 compatible image-based indent, where long titles
        break onto the next, non-indented line. Updated frontend.css with